--- a/views/login.html
+++ b/views/login.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div >
+  <div>
   <h1  class="loginhead">Login</h1>      
   </div>
       
@@ -29,5 +29,6 @@
   </div> 
   </form>
   <div class="loginresponse">{{res}}</div>
-<!--   <div>list is:-{{list}}</div> -->
+ <!--  <div>result is:-{{kranthikumar}}</div> -->
+ 
   </div>
