--- a/views/profilepage.html
+++ b/views/profilepage.html
@@ -102,7 +102,7 @@
 <!--your posts end -->
 
 <!--Add friends -->
-  <div class="row Addfriends">
+<!--   <div class="row Addfriends">
    <div class="col-md-12" > 
     <h3 class="head"> Add friends</h3>
     <div class="cointainer" ng-repeat="user in allusers">
@@ -112,7 +112,7 @@
        </p>
      </div>
    </div>
-  </div>
+  </div> -->
 <!--Add friends end -->
   
  
@@ -139,19 +139,19 @@
 <!--your friends end -->
 
 <!-- Your friend photos -->
-<div ng-repeat="user in allusers">
+<!-- <div ng-repeat="user in allusers">
 <div ng-repeat="x in farray">
  <div ng-repeat="image in images">  
-   <p class="username" ng-if="image.uid==x && user.id==x">{{ user.name }}</p>
+   <h4 class="username" ng-if="image.uid==x && user.id==x">{{ user.name }}</h4>
   <img class="showimage" ng-if="image.uid==x && user.id==x" ng-src="images/{{image.name}}" width="200" height="200" />  
  
  </div>
 </div>
-</div>
+</div> -->
 <!-- your friend photos end -->
 
 <!--Your friends posts -->
-  <div class="row yourfriendsposts">
+  <!-- <div class="row yourfriendsposts">
    <div class="col-md-12" > 
     <h3 class="head">Your Friends Posts</h3>
      <table class="table table-bordered">
@@ -172,7 +172,7 @@
       </tbody>
      </table>
    </div>
- </div>
+ </div> -->
   <!--your friend posts end -->
   
 </div><!--cointainer end -->
