--- a/views/register.html
+++ b/views/register.html
@@ -8,58 +8,60 @@
  <form ng-submit="submit(form)"  name="myForm" novalidate>
   <div class="form-group">
    <label for="name">Name:</label>
-    <input type="text"  ng-minlength="5" ng-maxlength="15" class="form-control" name="user" ng-model="form.user" required>
-     <span class="textcolor" ng-show="(myForm.user.$dirty && myForm.user.$invalid)||(myForm.user.$pristine && submitted)">
+    <input type="text"  ng-minlength="5" ng-maxlength="15" class="form-control" name="user" 
+
+     ng-model="form.user" ng-pattern="/^[a-zA-Z ]*$/" required>
+     <!-- <span class="textcolor" ng-show="(myForm.user.$dirty && myForm.user.$invalid)||(myForm.user.$pristine && submitted)">
        <span ng-show="myForm.user.$error.required">Name is required.</span>
        <span ng-show="myForm.user.$error.minlength">Name should cointain Minimum 5 characters</span>
       <span ng-show="myForm.user.$error.maxlength">Name should cointain Maximum 15 characters</span> 
 
-     </span>
-      <span class="textcolor" ng-show="nameerror">
-      <span ng-if="res=='Name already exists Try another'">{{res}}</span>
+     </span> -->
+      <span class="textcolor">
+      <span ng-if="failn==='0'">{{res1}}</span>
       </span>
   </div>
    
   <div class="form-group">
    <label for="email">Email:</label>
     <input type="email" class="form-control" name="email" ng-model="form.email" required>
-     <span class="textcolor" ng-show="(myForm.email.$dirty && myForm.email.$invalid)||(myForm.email.$pristine && submitted)">
+     <!-- <span class="textcolor" ng-show="(myForm.email.$dirty && myForm.email.$invalid)||(myForm.email.$pristine && submitted)">
        <span ng-show="myForm.email.$error.required">Email is required.</span>
        <span ng-show="myForm.email.$error.email">Invalid email address.</span>
       
-     </span>
-      <span class="textcolor" ng-show="emailerror">
-      <span ng-if="res=='Email already exists Try another'">{{res}}</span>
+     </span> -->
+      <span class="textcolor" >
+      <span ng-if="faile==='0'">{{res1}}</span>
       </span>
   </div>
   
   <div class="form-group">
    <label for="education">Education:</label>
     <input type="text" ng-minlength="2" ng-maxlength="10" class="form-control" name="education" ng-model="form.education" required>
-     <span class="textcolor" ng-show="(myForm.education.$dirty && myForm.education.$invalid)||(myForm.education.$pristine && submitted)">
+     <!-- <span class="textcolor" ng-show="(myForm.education.$dirty && myForm.education.$invalid)||(myForm.education.$pristine && submitted)">
        <span ng-show="myForm.education.$error.required">Education is required.</span> 
        <span ng-show="myForm.education.$error.minlength">Minimum 2 characters</span>
        <span ng-show="myForm.education.$error.maxlength">Maximum 10 characters</span>
-     </span>
+     </span> -->
   </div>
   
   <div class="form-group">
    <label for="password">Password:</label>
     <input type="password" ng-minlength="5" ng-maxlength="20" class="form-control" name="password" ng-model="form.password" required>
-     <span class="textcolor" ng-show="(myForm.password.$dirty && myForm.password.$invalid)||(myForm.password.$pristine && submitted)">
+    <!--  <span class="textcolor" ng-show="(myForm.password.$dirty && myForm.password.$invalid)||(myForm.password.$pristine && submitted)">
        <span ng-show="myForm.password.$error.required">Password is required.</span>
        <span ng-show="myForm.password.$error.minlength">Password is too short</span>
        <span ng-show="myForm.password.$error.maxlength">Password is too long</span>
-     </span>
+     </span> -->
   </div>
 
   <div class="form-group">
    <label for="cpassword">Confirm Password:</label>
     <input type="password"  class="form-control" name="cpassword" ng-model="form.cpassword" required>
-     <span class="textcolor" ng-show="(myForm.cpassword.$dirty && myForm.cpassword.$invalid)||(myForm.cpassword.$pristine && submitted)">
+    <!--  <span class="textcolor" ng-show="(myForm.cpassword.$dirty && myForm.cpassword.$invalid)||(myForm.cpassword.$pristine && submitted)">
        <span ng-show="myForm.cpassword.$error.required">It is required.</span> 
-     <!--   <span ng-if="form.password!=form.cpassword">Password and confirm password not matched</span>-->
-     </span>
+     
+     </span> -->
      <span class="textcolor" ng-show="myForm.cpassword.$dirty">
       <span ng-if="form.password!=form.cpassword"> Confirm Password should be same as Password </span></span>
   </div>
