--- a/views/profilepage.html
+++ b/views/profilepage.html
@@ -10,7 +10,7 @@
  <div class="row profilepic">
   <div class="col-md-12"> 
    <div ng-repeat="pic in profilepics">  
-    <img class="showimage" ng-if="showpic==pic.picid" ng-src="images/{{pic.name}}" width="200" height="200" />  
+    <img class="showimage" ng-if="showpic==pic.picid" ng-src="uploads/{{pic.name}}" width="200" height="200" />  
    </div>
    <p><b>Profilepicture</b> <span class="glyphicon glyphicon-camera"></span></p>
    <center><input type="file"  id="File2" file-input="files" > </center>
@@ -121,7 +121,7 @@
   <div class="col-md-12"> 
    <h3 class="head">Recent Profile Pictures</h3>
    <div class="displayimages" ng-repeat="pic in profilepics">
-    <img class="showimage" ng-if="id==pic.uid" ng-src="images/{{pic.name}}" width="200" height="200" />  
+    <img class="showimage" ng-if="id==pic.uid" ng-src="uploads/{{pic.name}}" width="200" height="200" />  
    </div>
    </div>
   </div>
