--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -77,3 +77,37 @@ width: 50%;
 .displayimages{
   display: inline-block;
 }
+.showcoverimage{
+  width: 100%;
+  height: 400px;
+}
+
+.coversize {
+  font-size: 40px;
+
+}
+.coverimage:hover {
+  opacity: 1.0;
+  filter: alpha(opacity=100);
+}
+.coverimage {
+  position: absolute;
+  left: 25px;
+  opacity: 0.6;
+  filter: alpha(opacity=50);
+}
+input[type="file"] {
+  display: none;
+}
+.photosize {
+  font-size: 20px;
+
+}
+.profilesize {
+  font-size: 20px;
+
+}
+
+body {
+  overflow-x: hidden;
+}
