--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -167,7 +167,7 @@ position: relative;
 left: 60px;
 }
 /**/
-.test{
+/*.test{
   visibility: hidden;
   
   position:absolute;
@@ -180,7 +180,7 @@ left: 60px;
 
 .kranthi:hover .test{
   visibility: visible;
-}
+}*/
 /*.left{
 background-color: gray;
 }*/
@@ -206,3 +206,193 @@ color: green;
 /*.glyphicon-thumbs-up{
   color: black;
 }*/
+
+/*reaction*/
+.like-btn {
+  font-weight: bold;
+  color: #7f7f7f;
+  position: relative;
+  cursor: pointer;
+  padding: 20px 20px 0 0;
+}
+
+.like-btn:hover {
+  text-decoration: underline;
+}
+
+.like-btn-emo {
+  display: inline-block;
+  margin: 0 6px -3px 0;
+  width: 16px;
+  height: 16px;
+}
+
+.reactions-box {
+  height: 44px;
+  width: 240px;
+  padding: 0px;
+  position: absolute;
+  top: -23px;
+  left: -14px;
+  box-shadow: 1px 1px 2px #cccccc;
+  border-radius: 44px 44px;
+  display: none;
+}
+
+.reaction {
+  list-style-type: none;
+  cursor: pointer;
+  display: inline-block;
+ /* width: 28px;
+  height: 28px;*/
+  position: absolute;
+  top: 8px;
+  opacity: 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+ 
+}
+
+.like-btn:hover .reactions-box {
+  display: block;
+}
+
+.reaction-like {
+  left: 10px;
+ height:30px; 
+ width: 30px;
+  background-image: url('../icons/reactions_like.png');
+}
+
+.reaction-love {
+  left: 48px;
+  height:30px; 
+  width: 30px;
+  background-image: url('../icons/reactions_love.png');
+}
+
+.reaction-haha {
+  left: 86px;
+  height:30px; 
+  width: 30px;
+  background-image: url('../icons/reactions_haha.png');
+}
+
+.reaction-wow {
+  left: 124px;
+  height:30px; 
+  width: 30px;
+  background-image: url('../icons/reactions_wow.png');
+}
+
+.reaction-sad {
+  left: 162px;
+  height:30px; 
+  width: 30px;
+  background-image: url('../icons/reactions_sad.png');
+}
+
+.reaction-angry {
+  left: 202px;
+  height:30px; 
+  width: 30px;
+  background-image: url('../icons/reactions_angry.png');
+}
+
+
+
+.like-btn:hover .reaction {
+  opacity: 1;
+  animation-name: reactions;
+  animation-duration: .5s;
+}
+
+@keyframes reactions {
+  0% {
+    width: 48px;
+    height: 48px;
+    top: 50px;
+  }
+  48% {
+    width: 56px;
+    height: 56px;
+    top: 5px;
+  } 
+  100% {
+    width: 48px;
+    height: 48px;
+    top: 8px;
+  }
+}
+
+
+.like-btn:hover .reaction-like {
+  animation-delay: 0s
+}
+
+.like-btn:hover .reaction-love {
+  animation-delay: .05s
+}
+
+.like-btn:hover .reaction-haha {
+  animation-delay: .1s
+}
+
+.like-btn:hover .reaction-wow {
+  animation-delay: .15s
+}
+
+.like-btn:hover .reaction-sad {
+  animation-delay: .2s
+}
+
+.like-btn:hover .reaction-angry {
+  animation-delay: .25s
+}
+
+.reaction:hover {
+  transform: scale(1.3, 1.3);
+  top: 2px
+}
+.like-btn-like{
+  background-image: url('../icons/reaction-small.png');
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: -17px -151px;
+}
+
+.like-btn-love{
+  background-image: url('../icons/reaction-small.png');
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: 0 -168px;
+  
+}
+
+.like-btn-haha{
+  background-image: url('../icons/reaction-small.png');
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: 0 -151px;
+}
+
+.like-btn-wow{
+  background-image: url('../icons/reaction-small.png');
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: -17px -185px;
+}
+
+.like-btn-sad{
+  background-image: url('../icons/reaction-small.png');
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: -17px -168px;
+}
+
+.like-btn-angry{
+  background-image: url('../icons/reaction-small.png');
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-position: -17px -117px;
+}
